<?xml version="1.0" encoding="utf-8"?>

<!-- Displays details of the recipe (ingredients and step descriptions) -->
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/recipe_detail_scrollview"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/recipe_detail_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvIngredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/detailBodyIndent"
            android:layout_marginStart="@dimen/detailBodyIndent"
            android:layout_marginTop="@dimen/detailBodyIndent"
            android:text="@string/ingredients"
            android:textSize="@dimen/detailHeadingTextSize" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvIngredients"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvSteps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/detailBodyIndent"
            android:layout_marginStart="@dimen/detailBodyIndent"
            android:layout_marginTop="@dimen/detailBodyIndent"
            android:text="@string/steps"
            android:textSize="@dimen/detailHeadingTextSize" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvSteps"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
