<!--Copyright (C) 2017 The Android Open Source Project

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

  	http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.-->
<resources>
    <string name="app_name">Time to Bake!</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="restart">Restart</string>
    <string name="add_widget">Add widget</string>
    <string name="ingredients">Ingredients</string>
    <string name="steps">Steps</string>
    <string name="bullet">&#8226;</string>
    <string name="nextStep">Next Step</string>
    <string name="bulletedList">&#8226;   %1$2s \n</string>
    <string name="no_content_message">No content available.</string>
    <string name="error_message">Error occurred - check permissions or network connection.</string>
    <string name="recipe_image">Recipe Image</string>
</resources>
